2010-10-22  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-method-default-engines): new variable.
	(nnir-run-query): use it.
	(nnir-group-mode-hook): remove key binding and move to gnus-group.el.
	(gnus-summary-nnir-goto-thread): change group if needed.

	* gnus-group.el (gnus-group-group-map): add key binding for
	gnus-group-make-nnir-group.

2010-10-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-object): Added.

	* gnus-sum.el (gnus-summary-select-article): Make sure we have the
	original article buffer live.
	(gnus-summary-select-article-buffer): Mention
	gnus-widen-article-buffer.

2010-10-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-strong): Added.

2010-10-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-completing-read): Remove all newlines from
	group names.  They mess up the group buffer badly.

	* shr.el (shr-tag-img): Don't bug out on images that don't have a SRC.

	* gnus-group.el (gnus-group-mark-group): Use gnus-group-position-point
	instead of the summary one.

2010-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-preview): Work properly when editing article.

	* gnus-start.el (gnus-read-active-file-1): Don't add method to
	gnus-have-read-active-file if it's already been in.

2010-10-22  Tom Tromey  <tromey@redhat.com>

	* gnus-group.el (gnus-group-unsubscribe-group): Fix args passed to
	gnus-group-completing-read.

2010-10-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-mode-map): Don't bind M-; to comment region, to
	allow the global comment-dwim to work.

2010-10-21  Julien Danjou  <julien@danjou.info>

	* message.el (message-setup-1): Allow message-default-headers to be a
	function.

2010-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-tag-table): Simplify.

2010-10-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-prefetch-images): Only prefetch http images
	to avoid trying to snarf invalid stuff.
